This file documents the revision history for the Monitoring Webinterface Thruk.

1.24     not released yet
          - conf tool:
              - reset reload flag on external reloads too
              - remove cached data when core config changes
          - fixed shinken livestatus version warning

1.22     Tue Mar  6 17:20:18 CET 2012
          - cli tool:
              - implemented setting backends with '-b'
          - use 127.0.0.1 and locahost tcp connections for local states too
          - preserve enabled themes/plugins on update via package
          - fixed packages apache config
          - fixed missing bracket on problems page
          - fixed problem with missing templates in packages
          - fixed customizing menu with insert_item()

1.20     Tue Feb 28 22:38:23 CET 2012
          - added cli tool
          - write pid file when running as fastcgi
          - show startpage when fcgid process is starting
          - added path to cookies, makes multiple instances possible on one host
          - added current attempt filter (Jordi van Scheijen)
          - fixed adding page reloads to browser history, now reloads don't show up in history
          - fixed statusmap table layout
          - fixed escaping newlines when escape_html is off
          - fixed sending commands to hosts/services with backslashes
          - fixed tests
          - config tool:
              - fixed adding custom variables

1.18     Tue Feb 14 17:17:38 CET 2012
          - changed version numbers to real numbers
              - from now on, even numbers will be stable releases
              - odd numbered releases will be test releases
              - this also fixes the Argument "1.1.7" isn't numeric in subroutine entry at... error
          - finished mobile plugin
          - support timeperiods in trends/availability reports
          - made duration of downtimes and acknowledgement configurable
          - replaced double downtime delete with checkbox